# translation_agency

./: .gitignore  README.md  SECURITY_FIXES.md  pyproject.toml  test_batched_provider.py
.github/workflows/: run_translation.yml  workflow-security-check.yml
n8n/: workflow.json
output/: step3_style_validation.txt  step4_accuracy_validation.txt  step7_crossllm_validation.txt
output/20251016_175921_realistic_business_report/: final_realistic_business_report.docx
output/n8n_test/test_document/: pipeline_summary.xlsx  step1_initial_translation.txt  step2_grammar_validation.txt  step3_style_validation.txt  step4_accuracy_validation.txt  step5_hallucination_validation.txt  step6_consistency_validation.txt  step7_crossllm_validation.txt
output/sample_doc/: pipeline_summary.xlsx  step1_initial_translation.txt  step2_grammar_validation.txt  step5_hallucination_validation.txt  step6_consistency_validation.txt
prompts/: accuracy.py  consistency.py  crossllm.py  grammar.py  hallucination.py  style.py  translation.py
scripts/: validate-workflow-security.sh
src/translation_agency/: __init__.py  api.py  config.py  main.py
src/translation_agency/integration/: n8n_client.py
src/translation_agency/llm/: langchain_provider.py
src/translation_agency/pipeline/: base_validator.py  orchestrator.py  orchestrator_old.py  translator.py  validators.py
src/translation_agency/utils/: excel_summary.py  file_handler.py
